add icons md and update strings for suport

--- a/custom_components/glance_clock/services.yaml
+++ b/custom_components/glance_clock/services.yaml
@@ -51,7 +51,10 @@ send_notice:
   fields:
     text:
       name: "Text"
-      description: "Message text to display"
+      description: |
+        Message text to display. To insert an icon, use [icon:CODE] in your message (e.g., "Wake up! [icon:123]").
+        
+        See the full list of available icons: https://github.com/PorlyBe/glance_clock_ha/blob/master/ICONS.md
       required: true
       selector:
         text:
