--- a/custom_components/glance_clock/services.yaml
+++ b/custom_components/glance_clock/services.yaml
@@ -1,3 +1,28 @@
+send_timer:
+  name: "Send Timer"
+  description: "Send a timer scene to the Glance Clock. The timer will run on the device."
+  fields:
+    countdown:
+      name: "Countdown (seconds)"
+      description: "Timer duration in seconds."
+      required: true
+      selector:
+        number:
+          min: 1
+          max: 86400
+          step: 1
+    intervals:
+      name: "Intervals (optional)"
+      description: "List of interval objects with text and duration. Each interval is an object: {text: string, duration: seconds, countdown: seconds}. Leave empty for a simple timer."
+      required: false
+      selector:
+        object:
+    final_text:
+      name: "Final Text (optional)"
+      description: "Text or list of texts to display when the timer finishes. Supports [icon:CODE] syntax."
+      required: false
+      selector:
+        text:
 update_display_settings:
   name: "Update Display Settings"
   description: "Update display settings on the Glance Clock"
@@ -53,7 +78,7 @@ send_notice:
       name: "Text"
       description: |
         Message text to display. To insert an icon, use [icon:CODE] in your message (e.g., "Wake up! [icon:123]").
-        
+
         See the full list of available icons: https://github.com/PorlyBe/glance_clock_ha/blob/master/ICONS.md
       required: true
       selector:
@@ -182,7 +207,7 @@ send_forecast:
       selector:
         color_rgb:
     min_color:
-      name: "Minimum Temperature Color" 
+      name: "Minimum Temperature Color"
       description: "Color for minimum temperature display"
       default: "#0000FF"
       selector:
